# kontainer

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  ruff.toml
.github/workflows/: check.yaml  publish.yaml
src/kontainer/: __init__.py
src/kontainer/container/: maybe.py  result.py
src/kontainer/core/: const.py  exception.py  types.py
src/kontainer/decorator/: __init__.py  maybe.py  option.py  result.py
src/kontainer/flow/: __init__.py  compose.py  flip.py  flowtools.py  maps.py  pipe.py
src/kontainer/maybe/: __init__.py  maybe.py  option.py  result.py
src/kontainer/utils/: func.py
tests/: test_init.py
tests/container/: base.py  test_maybe.py  test_result.py
tests/core/: test_const.py  test_exception.py
tests/decorator/: test_maybe.py  test_option.py  test_result.py
tests/flow/: test_compose.py  test_convert.py  test_flip.py  test_flowtools.py  test_maps.py  test_pipe.py
tests/maybe/: base.py  test_maybe.py  test_option.py  test_result.py
tests/utils/: test_func.py
