[project]
name = "kontainer"
version = "0.0.0"
description = "How to look like functional programming"
authors = [
    { name = "phi", email = "phi.friday@gmail.com" }
]
readme = "README.md"
license = { file = "LICENSE" }
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: Implementation :: CPython",
]
requires-python = ">= 3.8"
dependencies = [
    "typing-extensions>=4.4.0",
]

[project.urls]
Repository = "https://github.com/phi-friday/kontainer"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "ruff==0.3.0",
    "pytest>=8.0.0",
    "pytest-icdiff>=0.8",
    "anyio>=4.3.0",
    "uvloop>=0.19.0",
    "trio>=0.24.0",
    "hypothesis>=6.88.0",
    "pytest-cov>=4.1.0",
    "pre-commit>=3.5.0",
    "ipykernel>=6.29.0",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/kontainer"]

[tool.pyright]
pythonVersion = '3.8'
pythonPlatform = 'Linux'
diagnostic = 'basic'
include = ['src', 'tests']

[tool.pytest.ini_options]
addopts = "--cov=src/kontainer --cov-report html --cov-report=xml"
testpaths = ["tests"]

[tool.coverage.run]
omit = ["./tests/**/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]
